# rag_demo_1

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_zh-TW.md  app.py  config.example.json  conftest.py  example.py  package-lock.json  package.json  pyproject.toml  pytest.ini  rag.py  rag_local.py
.github/workflows/: ci.yml
demo/: rag_local.py
doc/: ARCHITECTURE.md  ENHANCEMENTS_SUMMARY.md  IMPROVEMENTS.md  VISUALIZATIONS_AND_API_DOCS.md  WHATS_NEW.md  prompt_gemini.txt  prompt_gpt.txt
static/: app.js  styles.css
templates/: index.html  visualizations.html
tests/: __init__.py  app.test.js  test_app.py  test_config_manager.py  test_conversation_manager.py  test_rag.py
utils/: __init__.py  config_manager.py  conversation_manager.py
