[project]
name = "rag-demo"
version = "0.1.0"
description = "Simple RAG demo with in-memory vector store"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-version = "3.10"
